PN-3270 risolti code smells